adding some comments on code

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,8 @@
                                         <li class="nav-item"><a class="nav-link scroll" href="/contact" id="contactNav">Contact</a></li>
                                         {% endif %}
                                     </ul>
+                                    <!--End Points-->
+                                    <!--/user,  /game, /halloffame, /about and /contact : https://localhost: ... /user-->
                                 </div>
                             </div>
                         </div>
